ghc-4335c07/testsuite/tests/parser/should_fail/readFail041.hs

{-# OPTIONS_GHC -XMultiParamTypeClasses #-}

module Foo where

class Foo a b | a -> b

