ghc-4335c07/testsuite/tests/parser/should_fail/readFail041.stderr

readFail041.hs:6:1: error:
    • Fundeps in class ‘Foo’
      (Enable FunctionalDependencies to allow fundeps)
    • In the class declaration for ‘Foo’
